# ese2023

./: .clang-format  .gitignore  .pre-commit-config.yaml  README.md  do_backup.sh  package-lock.json  package.json  protoc-meta-plugin.py  run-non-node-tests.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/.mosquitto/config/: mosquitto.conf
.github/workflows/: main.yml
cpp-library/: .gitignore  CMakeLists.txt  LICENSE  build-and-test.sh
cpp-library/examples/: CMakeLists.txt  commandline.cpp  demo_hello_apple_basket.cpp  demo_hello_visitor.cpp
cpp-library/examples/fastdds/: CMakeLists.txt
cpp-library/examples/fastdds/examples/: publisher.cpp  subscriber.cpp
cpp-library/examples/fastdds/src/dds_examples/: HelloWorld.cxx  HelloWorld.h  HelloWorld.idl  HelloWorld.meta.h  HelloWorldPubSubTypes.cxx  HelloWorldPubSubTypes.h  Simple.cxx  Simple.h  Simple.idl  Simple.meta.h  SimplePubSubTypes.cxx  SimplePubSubTypes.h
cpp-library/examples/fastdds/test/: CMakeLists.txt  catchmain.cpp  fastdds.cpp
cpp-library/examples/grpc/: CMakeLists.txt  README.md
cpp-library/examples/grpc/examples/: main.cpp
cpp-library/examples/grpc/model/: HelloWorld.proto  Simple.proto
cpp-library/examples/grpc/src/: CMakeLists.txt  HelloWorld.meta.h  Simple.meta.h
cpp-library/examples/grpc/src/meta/: grpc.h
cpp-library/examples/grpc/test/: CMakeLists.txt  grpc.cpp
cpp-library/examples/mqtt/: CMakeLists.txt  README.md  mqtt_publisher.cpp
cpp-library/model/: commandline.schema.json  demo.schema.json  examples.json  fruit.schema.json
cpp-library/src/: CMakeLists.txt
cpp-library/src/meta/: CMakeLists.txt
cpp-library/src/meta/include/meta/: convert.h  json.h  meta.h  print.h  program_options.h  type_traits.h  virtual_meta.h
cpp-library/src/meta/test/: CMakeLists.txt  traits_meta_struct_test.cpp
cpp-library/test/: CMakeLists.txt  accessAttributeByName.cpp  convert.cpp  convert_helper.cpp  convert_helper.h  json.cpp  print.cpp  program_options.cpp  type_traits.cpp  virtual_meta.cpp
idl-converter/: idl2meta
idl-converter/ridlbe/idl2meta/: config.rb  require.rb  writer.rb
python-library/: pyproject.toml  requirements.txt  run_tests.sh
python-library/model/: fruit.schema.json
python-library/src-gen/example_com_schemas_defs/: MyObj1.py  MyObj2.py
python-library/src-gen/fruits/: Apple.py  Basket.py  Color.py
python-library/test/: test_basic.py
